Fix overflow in item-table due to last resize-handle.

--- a/src/stylesheets/components/item/_table.scss
+++ b/src/stylesheets/components/item/_table.scss
@@ -184,6 +184,12 @@
         display: none;
         margin: 0 -4px 0 -5px;
       }
+
+      &:nth-last-child(2) {
+        .resizable-handle-right {
+          right: 0;
+        }
+      }
     }
   }
 
